--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,9 @@
-@import 'vars';
-@import 'fonts';
 @import 'reset';
+@import 'vars';
+@import 'mixins';
+@import 'fonts';
 @import 'global';
+
+
 @import 'media';
 
