added mixin for flex

--- a/app/scss/_mixins.scss
+++ b/app/scss/_mixins.scss
@@ -8,3 +8,31 @@
     font-display: swap;
   }
 }
+
+// flexbox mixins
+@mixin flex {
+  display: flex;
+}
+
+@mixin flex-v-center {
+  display: flex;
+  align-items: center;
+}
+
+@mixin flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@mixin flex-space {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@mixin flex-evenly {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
