--- a/app/scss/_reset.scss
+++ b/app/scss/_reset.scss
@@ -1,9 +1,3 @@
-html, 
-body {
-  scroll-behavior: smooth;
-  overscroll-behavior-y: none;
-}
-
 html {
   box-sizing: border-box;
 }
@@ -17,6 +11,7 @@ html {
 ul,
 ol {
   padding: 0;
+  margin: 0;
 }
 
 body,
