--- a/app/scss/_mixins.scss
+++ b/app/scss/_mixins.scss
@@ -10,8 +10,9 @@
 }
 
 // flexbox mixins
-@mixin flex {
+@mixin flex-between {
   display: flex;
+  justify-content: space-between;
 }
 
 @mixin flex-v-center {
@@ -25,7 +26,7 @@
   justify-content: center;
 }
 
-@mixin flex-space {
+@mixin flex-center-sb {
   display: flex;
   align-items: center;
   justify-content: space-between;
