--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -45,7 +45,12 @@
     --figure-hero: polygon(0 0, 100% 0%, 100% 58%, 0 90%);
   }
 
+  @include media(mobile-l, max) {
+    --figure-services: polygon(0 0, 100% 14%, 100% 84%, 0 74%);
+  }
+
   @include media(mobile-s, max) {
     --figure-hero: polygon(0 0, 100% 0%, 100% 68%, 0 82%);
+    --figure-services: polygon(0 0, 100% 10%, 100% 78%, 0 74%);
   }
 }
